--- a/content/pages/studies/978-1-896926-71-1.rst
+++ b/content/pages/studies/978-1-896926-71-1.rst
@@ -1,9 +1,12 @@
-Manuscript Sources of French Music Theory
-=========================================
+Manuscript Sources of French Music Theory: Paris, Bibliothèque Nationale, Arsenal, MS 3042. A Facsimile Edition with Translations, Introduction and Commentary.
+===============================================================================================================================================================
 
-:author: Buffet, Máire
+:author: Egan-Buffet, Máire
 :volume: LXXXII
 :price: 112
 :isbn10: 1-896926-71-1
 :isbn13: 978-1-896926-71-1
 :publisher: IMM
+:place: Ottawa
+:date: 2005
+:pages: v + 211
