--- a/content/pages/studies/978-1-926664-02-6.rst
+++ b/content/pages/studies/978-1-926664-02-6.rst
@@ -13,4 +13,4 @@ HISTORIÆ: The Offices and Masses of St. Knud Lavard († 1131), (Kiel Univ. Lib
 :place: Copenhagen; Ottawa
 :year: 2010
 
-Transcription and Edition by John Bergsagel.
+Transcription and Edition by John Bergsagel (in volume 2, LXV/17b).
