--- a/content/pages/studies/978-1-926664-08-8.rst
+++ b/content/pages/studies/978-1-926664-08-8.rst
@@ -1,4 +1,5 @@
-Bibliographia Organorum Antiquorum, cum indicibus nominum et rerum ==================================================================
+Bibliographia Organorum Antiquorum, cum indicibus nominum et rerum
+==================================================================
 
 :author: Ristory, Heinz
 :volume: XCV
