--- a/content/pages/studies/978-1-896926-90-2.rst
+++ b/content/pages/studies/978-1-896926-90-2.rst
@@ -1,9 +1,15 @@
-Boethius: De Institutione arithmetica libri duo
-===============================================
+Boethius: De institutione arithmetica libri duo; Édition proto-philologique intégrale princeps d’un manuscript du IXe siècle (Paris, Bibliothèque nationale de France, latin 14064)
+===================================================================================================================================================================================
 
 :author: Humphrey, Illo
-:author2: Boethius
 :volume: LXXXVI
 :price: 120
+:isbn10: 1-896926-90-8
 :isbn13: 978-1-896926-90-2
 :publisher: IMM
+:place: Ottawa
+:date: 2007
+:pages: viii + 267
+:corrigenda: ISBN10 printed as 1-896926-90-2
+
+Texte, gloses, notes tironiennes, signes de renvoi.
