--- a/content/pages/studies/978-0-931902-81-9.rst
+++ b/content/pages/studies/978-0-931902-81-9.rst
@@ -1,5 +1,5 @@
-Secular Medieval Latin Song: Anthology
-======================================
+Secular Medieval Latin Song: An Anthology
+=========================================
 
 :author: Gillingham, Bryan
 :volume: LX
@@ -9,3 +9,5 @@ Secular Medieval Latin Song: Anthology
 :isbn13: 978-0-931902-81-9
 :publisher: IMM
 :place: Ottawa
+:date: 1993
+:pages: xv + 475
