--- a/content/pages/studies/978-0-931902-57-4.rst
+++ b/content/pages/studies/978-0-931902-57-4.rst
@@ -2,5 +2,11 @@ Italian Tonaries
 ================
 
 :author: Merkley, Paul
+:volume: XLVIII
 :price: 60
+:isbn10: 0-931902-57-6
 :isbn13: 978-0-931902-57-4
+:publisher: IMM
+:place: Ottawa
+:date: 1988
+:pages: 246 pp.
