--- a/content/pages/studies/978-0-931902-96-3.rst
+++ b/content/pages/studies/978-0-931902-96-3.rst
@@ -1,6 +1,7 @@
-CANTUS, Linz, Bundesst. Studienbibl. 290 (183)
-==============================================
+CANTUS: A Monastic Breviary of Austrian Provenance, Linz, Bundesstaatliche Studienbibliothek, 290 (183), Printouts from an Index in Machine-Readable Form, A CANTUS Index
+=========================================================================================================================================================================
 
+:author: Czernin, Martin
 :volume: LV
 :volume_part: 3
 :price: 78
@@ -8,3 +9,7 @@ CANTUS, Linz, Bundesst. Studienbibl. 290 (183)
 :isbn13: 978-0-931902-96-3
 :publisher: IMM
 :place: Ottawa
+:date: 1995
+:pages: xxii + 168
+
+Project Director: Ruth Steiner.
