--- a/content/pages/studies/978-1-896926-05-6.rst
+++ b/content/pages/studies/978-1-896926-05-6.rst
@@ -1,6 +1,8 @@
-CANTUS, Utrecht Antiphonar, Rijksuni. 406 (3.J.7)
-=================================================
-	
+CANTUS: An Utrecht Antiphoner, Utrecht, Bibliotheek der Rijksuniversiteit, 406 (3.J.7), Printouts from an Index in Machine-Readable Form, A CANTUS Index
+========================================================================================================================================================
+
+:author: Downey, Charles
+:editor: Steiner, Ruth
 :volume: LV
 :volume_part: 6
 :price: 82
@@ -8,3 +10,5 @@ CANTUS, Utrecht Antiphonar, Rijksuni. 406 (3.J.7)
 :isbn13: 978-1-896926-05-6
 :publisher: IMM
 :place: Ottawa
+:date: 1997
+:pages: xx + 220
