--- a/content/pages/studies/978-1-896926-33-9.rst
+++ b/content/pages/studies/978-1-896926-33-9.rst
@@ -1,6 +1,9 @@
-CANTUS, Salamanca, Archivo de la Catedral, 5,6,7,8
-==================================================
-	
+CANTUS: Salamanca, Archivo de la Catedral, 5,6,7,8, Printouts from an Index in Machine-Readable Form, A CANTUS Index
+====================================================================================================================
+
+:author: Boyce, James
+:author2: Lacoste, Debra
+:author3: Mitchell, Andrew
 :volume: LV
 :volume_part: 8
 :price: 64
@@ -8,3 +11,7 @@ CANTUS, Salamanca, Archivo de la Catedral, 5,6,7,8
 :isbn13: 978-1-896926-33-9
 :publisher: IMM
 :place: Ottawa
+:date: 2001
+:pages: li + 67
+
+Introduction by James Boyce. Project Director: Terence Bailey.
