--- a/content/pages/studies/978-1-896926-16-2.rst
+++ b/content/pages/studies/978-1-896926-16-2.rst
@@ -1,11 +1,13 @@
-Chant and Its Peripheries: Essays for T. Bailey
-===============================================
+Chant and its Peripheries: Essays in Honour of Terence Bailey
+=============================================================
 
-:author: Gillingham
-:author2: Merkley
+:editor: Gillingham, Bryan
+:editor2: Merkley, Paul
 :volume: LXXII
 :price: 88
 :isbn10: 1-896926-16-9
 :isbn13: 978-1-896926-16-2
 :publisher: IMM
 :place: Ottawa
+:date: 1998
+:pages: vi + 418
