--- a/content/pages/collected_works/978-1-926664-19-4.rst
+++ b/content/pages/collected_works/978-1-926664-19-4.rst
@@ -1,8 +1,12 @@
-Hildegard of Bingen: Ordo Virtutum
-==================================
+Hildegard of Bingen: Ordo Virtutum, A Comparative Edition
+=========================================================
 
 :author: Hildegard of Bingen
 :editor: Corrigan, Vincent
 :volume: XXVIII
-:isbn13: 978-1-926664-19-4
 :price: 84
+:isbn13: 978-1-926664-19-4
+:publisher: IMM
+:place: Lions Bay, BC
+:date: 2013
+:pages: l + 60
