--- a/content/pages/studies/978-1-926664-24-8.rst
+++ b/content/pages/studies/978-1-926664-24-8.rst
@@ -1,9 +1,12 @@
-A Musicological Gift: Libro Homeneje for Jane Morlet Hardie
+A Musicological Gift: Libro Homenaje for Jane Morlet Hardie
 ===========================================================
 
-:author: Nelson, K.
-:author2: Gomez, M.
+:editor: Nelson, Kathleen
+:editor2: Gómez, Maricarmen
 :volume: CI
 :price: 126
 :isbn13: 978-1-926664-24-8
 :publisher: IMM
+:place: Lions Bay, BC
+:date: 2013
+:pages: iii + 394
