--- a/content/pages/studies/978-1-896926-04-9.rst
+++ b/content/pages/studies/978-1-896926-04-9.rst
@@ -1,10 +1,11 @@
-The Manuscript Ivrea, Bibl. capitolare 115
-==========================================
+The Manuscript Ivrea, Biblioteca Capitolare 115: Studies in the Transmission and Composition of Ars Nova Polyphony ==================================================================================================================
 
-:author: Kügle, K.
+:author: Kügle, Karl
 :volume: LXIX
 :price: 76
 :isbn10: 1-896926-04-5
 :isbn13: 978-1-896926-04-9
 :publisher: IMM
 :place: Ottawa
+:date: 1997
+:pages: xvii + 285
