--- a/content/pages/studies/978-1-896926-04-9.rst
+++ b/content/pages/studies/978-1-896926-04-9.rst
@@ -1,4 +1,5 @@
-The Manuscript Ivrea, Biblioteca Capitolare 115: Studies in the Transmission and Composition of Ars Nova Polyphony ==================================================================================================================
+The Manuscript Ivrea, Biblioteca Capitolare 115: Studies in the Transmission and Composition of Ars Nova Polyphony
+==================================================================================================================
 
 :author: Kügle, Karl
 :volume: LXIX
