--- a/content/pages/studies/978-1-926664-29-3.rst
+++ b/content/pages/studies/978-1-926664-29-3.rst
@@ -1,9 +1,14 @@
-The Becket Offices (2)
-======================
+The Becket Offices (2), Paradigms for liturgical research: Analysis
+===================================================================
 
-:author: Helsen, Kate
-:author2: Getz
+:editor: Helsen, Kate
+:editor2: Getz, Rob
 :volume: CIII
-:price: 90
 :isbn13: 978-1-926664-29-3
+:price: 90
+:place: Lions Bay, BC
 :publisher: IMM
+:date: 2014
+:pages: iv + 164
+
+In memory of Andrew Hughes.
