--- a/content/pages/studies/978-1-926664-30-9.rst
+++ b/content/pages/studies/978-1-926664-30-9.rst
@@ -1,8 +1,11 @@
-122 Ambrosian Responsories
-==========================
+122 Ambrosian Responsories: Transcription and Analyses
+======================================================
 
 :author: Bailey, Terence
 :volume: CIV
-:price: 120
 :isbn13: 978-1-926664-30-9
+:price: 120
+:place: Lions Bay, BC
 :publisher: IMM
+:date: 2014
+:pages: xxiii + 308
