--- a/content/pages/studies/978-1-926664-05-7.rst
+++ b/content/pages/studies/978-1-926664-05-7.rst
@@ -1,4 +1,4 @@
-HISTORIÆ: The Offices and Masses of St. Knud Lavard († 1131), (Kiel Univ. Lib. MS S.H. 8 A.8°). Volume 2: Edition
+HISTORIÆ: The Offices and Masses of St. Knud Lavard († 1131), (Kiel Univ. Lib. MS S.H. 8 A.8°), Volume 2: Edition
 =================================================================================================================
 
 :author: Bergsagel, John
