--- a/content/pages/collected_works/978-1-896926-21-6.rst
+++ b/content/pages/collected_works/978-1-896926-21-6.rst
@@ -1,7 +1,7 @@
 Capella Sistina 51, Biblioteca Apostolica Vaticana, Città del Vaticano: Liber Missarum (1)
 ==========================================================================================
 
-:author: Eakins, Rex
+:editor: Eakins, Rex
 :volume: XVII
 :volume_part: 1
 :isbn10: 1-896926-21-5
