--- a/content/pages/collected_works/978-1-896926-46-9.rst
+++ b/content/pages/collected_works/978-1-896926-46-9.rst
@@ -1,8 +1,17 @@
-Sextetos y Septetos VII
-=======================
+Obras completas de Cristóbal Galán, Volumen VII: Sextetos y Septetos
+====================================================================
 
 :author: Galán, Cristóbal
-:isbn10: 1-896926-46-0
-:isbn13: 978-1-896926-46-9
+:editor: Baron, John H.
+:editor2: Vogt, Eric W.
 :volume: XII
 :volume_part: 7
+:isbn10: 1-896926-46-0
+:isbn13: 978-1-896926-46-9
+:price: 140
+:place: Ottawa
+:publisher: IMM
+:date: 2002
+:pages: xlv + 244
+
+Edición de John H. Baron, Eric W. Vogt.
