--- a/content/pages/collected_works/978-1-896926-87-2.rst
+++ b/content/pages/collected_works/978-1-896926-87-2.rst
@@ -1,8 +1,16 @@
-Obras para conjuntos de más de ocho voces . . .
-===============================================
+Obras completas de Cristóbal Galán, Volumen XI: Obras para conjuntos de más de ocho voces u ocho voces con instrumentos obligados
+=================================================================================================================================
 
 :author: Galán, Cristóbal
+:editor: Baron, John H.
+:editor2: Vogt, Eric W.
 :volume: XII
 :volume_part: 11
-:price: 140
 :isbn13: 978-1-896926-87-2
+:price: 140
+:place: Ottawa
+:publisher: IMM
+:date: 2007
+:pages: xxvii + 180
+
+Edición de John H. Baron, Eric W. Vogt.
