--- a/content/pages/collected_works/978-0-931902-59-8.rst
+++ b/content/pages/collected_works/978-0-931902-59-8.rst
@@ -1,5 +1,16 @@
-Galliculus II: 3 Magnificats
-============================
+Gesamtausgabe der Werke von Johannes Galliculus (Hähnel), Band II: Magnificat Quarti Toni, Magnificat Quinti Toni, Magnificat Septimi Toni
+==========================================================================================================================================
 
+:author: Galliculus (Hähnel), Johannes
+:editor: Moorefield, Arthur A.
 :volume: VIII
 :volume_part: 2
+:isbn10: 0-931902-59-2
+:isbn13: 978-0-931902-59-8
+:price: 80
+:place: Ottawa
+:publisher: IMM
+:date: 1988
+:pages: xxxiii + 86
+
+Herausgegeben von Arthur A. Moorefield.
