--- a/content/pages/collected_works/978-0-931902-78-9.rst
+++ b/content/pages/collected_works/978-0-931902-78-9.rst
@@ -1,7 +1,17 @@
-Solos, duos y tríos IV
-======================
+Obras completas de Cristóbal Galán, Volumen IV: Solos, dúos y tríos
+===================================================================
 
-:author: Galán, Cristóbal 
+:author: Galán, Cristóbal
+:editor: Baron, John H.
+:editor2: Heiple, Daniel L.
 :volume: XII
 :volume_part: 4
+:isbn10: 0-931902-78-9
 :isbn13: 978-0-931902-78-9
+:price: 116
+:place: Ottawa
+:publisher: IMM
+:date: 1993
+:pages: xlix + 213
+
+Edición de John H. Baron, Daniel L. Heiple.
