--- a/content/pages/studies/978-1-896926-22-3.rst
+++ b/content/pages/studies/978-1-896926-22-3.rst
@@ -1,11 +1,15 @@
-Medieval Germany: Associations & Delineations
-=============================================
+Medieval Germany: Associations and Delineations
+===============================================
 
-:author: van Deusen, Nancy	
+:editor: van Deusen, Nancy
 :volume: LXII
 :volume_part: 5
-:price: 48
 :isbn10: 1-896926-22-3
 :isbn13: 978-1-896926-22-3
-:publisher: IMM
+:price: 48
 :place: Ottawa
+:publisher: IMM
+:date: 2000
+:pages: xii + 172
+
+Claremont Cultural Studies.
