--- a/content/pages/manuscripts/978-1-896926-60-5.rst
+++ b/content/pages/manuscripts/978-1-896926-60-5.rst
@@ -14,4 +14,4 @@ Utrecht, Universiteitsbibliotheek, Hs. 16 H 34
 :place: Ottawa
 :year: 2004
 
-NOTE: Out of Print (contact IMM for further information). A fascinating composite manuscript transmitting Latin songs for 1 to 3 voices and Dutch Christmas carols for 2 voices. The 15th c. ms, believed to have been copied in the Ijssel Valley in the Netherlands, contains both white mensural and German neume notation. Prepared by Ulrike Hascher-Burger. Includes 6 colour plates (pp. xl-xlv), followed by the complete manuscript in greyscale images.
+NOTE: Nearly Out of Print (contact IMM for further information - one copy remains as of Feb 2018). A fascinating composite manuscript transmitting Latin songs for 1 to 3 voices and Dutch Christmas carols for 2 voices. The 15th c. ms, believed to have been copied in the Ijssel Valley in the Netherlands, contains both white mensural and German neume notation. Prepared by Ulrike Hascher-Burger. Includes 6 colour plates (pp. xl-xlv), followed by the complete manuscript in greyscale images.
