--- a/content/pages/studies/978-1-926664-07-1.rst
+++ b/content/pages/studies/978-1-926664-07-1.rst
@@ -12,4 +12,4 @@ Les traditions du  Plain-chant Occidental / Traditions in Western Plainchant
 :pages: xx + 225
 :corrigenda: ISBN is printed as 978-1-926664-07-01. McMaster University is identified as “University McMaster” on the title page.
 
-Proceedings of the conference of the Gregorian Institute of Canada, McMaster University (Hamilton), August 13-16, 2009. Foreward by William Renwick.
+Proceedings of the conference of the Gregorian Institute of Canada, McMaster University (Hamilton), August 13-16, 2009. Foreword by William Renwick.
