--- a/content/pages/studies/978-1-926664-40-8.rst
+++ b/content/pages/studies/978-1-926664-40-8.rst
@@ -2,7 +2,7 @@ HISTORIÆ: The Office of Saint William of York
 =============================================
 
 :author: Toy, John
-:author: Hiley, David
+:author2: Hiley, David
 
 :volume: LXV
 :volume_part: 27
