--- a/content/pages/studies/978-1-926664-48-4.rst
+++ b/content/pages/studies/978-1-926664-48-4.rst
@@ -5,7 +5,7 @@ Music Theory Manuscripts from Mediaeval Normandy
 
 :volume: CX
 :pages: xviii + 312
-:price: 
+:price: 120
 :isbn13: 978-1-926664-48-4
 :publisher: IMM
 :place: Kitchener
