--- a/content/pages/in_translation/978-1-926664-17-0.rst
+++ b/content/pages/in_translation/978-1-926664-17-0.rst
@@ -1,4 +1,12 @@
 Guido's Rhythmic Rules: Medieval Fundamentals of Music Theory in Verse Form
 ===========================================================================
 
+:author: Guido of Arezzo
+:editor: Stephenson, Ken
 :volume: XX
+:pages: xiv + 37
+:price: 52
+:isbn13: 978-1-926664-17-0
+:publisher: IMM
+:place: Ottawa, ON / Lions Bay, BC
+:year: 2012
