--- a/content/pages/studies/978-1-926664-51-4.rst
+++ b/content/pages/studies/978-1-926664-51-4.rst
@@ -3,9 +3,11 @@ HISTORIÆ: The Dominican Mass and Office for the Crown of Thorns
 
 :author: Maurey, Yossi
 :volume: LXV/29
-:pages:
-:price:
+:pages: xxxiv + 41
+:price: 70
 isbn13: 978-1-926664-51-4
-:publisher:
-:place:
-:year:
+:publisher: IMM
+:place: Kitchener, ON
+:year: 2019
+
+Introduction and Edition by Yossi Maurey.
