--- a/content/pages/studies/978-1-926664-51-4.rst
+++ b/content/pages/studies/978-1-926664-51-4.rst
@@ -5,7 +5,7 @@ HISTORIÆ: The Dominican Mass and Office for the Crown of Thorns
 :volume: LXV/29
 :pages: xxxiv + 41
 :price: 70
-isbn13: 978-1-926664-51-4
+:isbn13: 978-1-926664-51-4
 :publisher: IMM
 :place: Kitchener, ON
 :year: 2019
