--- a/content/pages/studies/978-1-926664-51-4.rst
+++ b/content/pages/studies/978-1-926664-51-4.rst
@@ -2,7 +2,8 @@ HISTORIÆ: The Dominican Mass and Office for the Crown of Thorns
 ===============================================================
 
 :author: Maurey, Yossi
-:volume: LXV/29
+:volume: LXV
+:volume_part: 29
 :pages: xxxiv + 41
 :price: 70
 :isbn13: 978-1-926664-51-4
