--- a/content/pages/collected_works/978-1-926664-55-2.rst
+++ b/content/pages/collected_works/978-1-926664-55-2.rst
@@ -8,5 +8,5 @@ Collected Works of Benedictus Appenzeller, Vol. 1: Masses I
 :isbn13: 978-1-926664-55-2
 :pages: xliv + 139
 :publisher: IMM
-:place: Kitchener
+:place: Kitchener, ON
 :year: 2020
