--- a/content/pages/studies/978-1-896926-12-4.rst
+++ b/content/pages/studies/978-1-896926-12-4.rst
@@ -2,7 +2,6 @@ HISTORIÆ: Historia Sancti Dionysii Areopagitæ, St. Emmeram, Regensburg, ca. 10
 ==========================================================================================
 
 :author: Hankeln, Roman
-
 :volume: LXV
 :volume_part: 3
 :pages: lxxii + 64
@@ -13,4 +12,4 @@ HISTORIÆ: Historia Sancti Dionysii Areopagitæ, St. Emmeram, Regensburg, ca. 10
 :place: Ottawa
 :year: 1998
 
-Introduction and Edition by Roman Hankeln.
+Introduction and Edition by Roman Hankeln. Second printing: Kitchener, ON, 2020.
