--- a/content/pages/studies/978-1-926664-05-7.rst
+++ b/content/pages/studies/978-1-926664-05-7.rst
@@ -12,4 +12,4 @@ HISTORIÆ: The Offices and Masses of St. Knud Lavard († 1131), (Kiel Univ. Lib
 :date: 2010
 :pages: xliv + 72
 
-Reproduced in facsimile, transcribed and edited by John Bergsagel. With an essay on the historical background by Thomas Riis, and a foreword by David Hiley.
+Reproduced in facsimile in Volume 1 (Musicological Studies, Vol. LXV/17a). Transcribed and edited by John Bergsagel in Volume 2 (Musicological Studies, Vol. LXV/17b) with an essay on the historical background by Thomas Riis, and a Foreword by David Hiley.
