--- a/content/pages/studies/978-0-931902-42-0.rst
+++ b/content/pages/studies/978-0-931902-42-0.rst
@@ -6,11 +6,11 @@ HISTORIÆ: Historia Sancti Emmerammi, Arnoldi Vohburgensis, circa 1030
 :volume: LXV
 :volume_part: 2
 :pages: xxx + 43
-:price: 52
+:price: 70
 :isbn10: 0-931902-42-8
 :isbn13: 978-0-931902-42-0
 :publisher: IMM
-:place: Ottawa
-:year: 1996
+:place: Ottawa; Kitchener
+:year: 1996; 2022
 
-Introduction and Edition by David Hiley.
+Introduction and Edition by David Hiley. First printing Ottawa: IMM, 1996. Second printing Kitchener (ON): IMM, 2022.
