--- a/content/pages/collected_works/978-1-926664-19-4.rst
+++ b/content/pages/collected_works/978-1-926664-19-4.rst
@@ -1,4 +1,4 @@
-Hildegard of Bingen: Ordo Virtutum, A Comparative Edition
+Hildegard of Bingen, Ordo Virtutum: A Comparative Edition
 =========================================================
 
 :author: Hildegard of Bingen
