--- a/content/pages/collected_works/978-1-926664-64-4.rst
+++ b/content/pages/collected_works/978-1-926664-64-4.rst
@@ -8,7 +8,7 @@ The Collected Transmissions of the Masses by Johannes Martini, Vol. 2: Masses II
 :place: Kitchener, ON
 :publisher: IMM
 :date: 2022
-:pages: vi + 337 pp.
+:pages: vi + 337
 :price: 210
 
 Missa Orsus orsus Part Two, Missa Ferialis Part Two, Missa Cucu, Missa Sela sans plus
