--- a/content/pages/studies/978-1-926664-66-8.rst
+++ b/content/pages/studies/978-1-926664-66-8.rst
@@ -1,4 +1,4 @@
-HISTORIÆ: Hermannus Contractus (1013–1054), Historia de sanctis Gordiano et Epimacho
+HISTORIÆ: Hermannus Contractus (1013–1054), Historia de Sanctis Gordiano et Epimacho
 =====================================================================================
 
 :author: Morent, Stefan
