Renamed date to year in front matter

--- a/books/studies/978-0-931902-64-2.md
+++ b/books/studies/978-0-931902-64-2.md
@@ -9,7 +9,7 @@ isbn10: 0-931902-64-9
 isbn13: 978-0-931902-64-2
 publisher: IMM
 place: Ottawa
-date: 1990
+year: 1990
 pages: xviii + 656
 corrigenda: 3 pages of corrections, insertions, and additions based on work completed in subsequent volumes
 ---
