--- a/books/studies/978-0-931902-79-6.md
+++ b/books/studies/978-0-931902-79-6.md
@@ -11,7 +11,7 @@ isbn10: 0-931902-79-7
 isbn13: 978-0-931902-79-6
 publisher: IMM
 place: Ottawa
-date: 1993
+year: 1993
 pages: xix + 178
 ---
 Introduction by Paul Merkley. Project Director: Ruth Steiner.
