--- a/books/in_translation/978-0-931902-44-4.md
+++ b/books/in_translation/978-0-931902-44-4.md
@@ -1,5 +1,5 @@
 ---
-title: Nikolaus Gengenbach's Musica nova: Newe Singekunst
+title: "Nikolaus Gengenbach's Musica nova: Newe Singekunst"
 author: Gengenbach, Nikolaus
 editor: Scott, Allen
 volume: XIV
